@@ -1,8 +1,12 @@
 Program to quickly assemble a notes prgm for a ti-84+ or ti-84+ce.
-All code entry fields require two charachter, only capitol letters and numbers may be used.
+All code entry fields require two characters, only capitol letters and numbers may be used.
 The legacy system is a simpler way to get a singular document into a calculator.
 
 Run program
 Enter your text in the box, decide if you want it to loop (end page going back to first and vice versa)
 Then save to a txt
 Once you have the txt you can put in ti-connect software to upload it
+
+build instructions (personal use)
+run "native-image -Djava.awt.headless=false --enable-preview -jar [filename].jar"
+in visual studio command prompt run "EDITBIN /SUBSYSTEM:WINDOWS [filename].exe"
